# vmprotectunpacker

./: CMakeLists.txt  README.md
include/vmprotectunpacker/: Analyzer.h  BytecodeExtractor.h  Devirtualizer.h  ImportFixer.h  Logger.h  Peparser.h  ShellcodeDumper.h  Utils.h  VMPDebugger.h  VMProtectDetector.h
src/: Analyzer.cpp  BytecodeExtractor.cpp  Devirtualizer.cpp  ImportFixer.cpp  Logger.cpp  Peparser.cpp  ShellcodeDumper.cpp  VMPDebugger.cpp  VMProtectDetector.cpp  main.cpp
